[metadata]
name = loclx_colab
version = 0.0.5
author = Haitham Alyahyaai
author_email = galaxy.w99@gmail.com
description = A lightweight Python package that creates a seamless bridge between Google Colab notebooks and Localxpose service. It enables easy exposure and access to web applications running in Colab environments  making it simple to test and showcase web services directly from your Colab notebooks.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cce15/loclx_colab
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
packages = find:
python_requires = >=3.6
